[metadata]
name = desmod
author = Peter Grayson
author_email = pete@jpgrayson.net
description = Discrete Event Simulation Modeling using SimPy
long_description = file: README.rst, LICENSE.txt, CHANGELOG.rst
url = https://desmod.readthedocs.io/
download_url = https://github.com/SanDisk-Open-Source/desmod
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Scientific/Engineering

[options]
include_package_data = True
setup_requires =
    setuptools_scm
install_requires =
    simpy
    pyvcd
    PyYAML
packages =
    desmod

[bdist_wheel]
universal = 1

[tool:pytest]

[flake8]
max-line-length = 88
ignore = D, E203, E501, W503
exclude = build/, .*/

[isort]
force_grid_wrap = 0
from_first = True
include_trailing_comma = True
line_length = 88
multi_line_output = 3
use_parentheses = True
skip_glob = .*
known_third_party =
    colorama
    progressbar
    simpy
    vcd
    yaml
